@@ -29,7 +29,7 @@ else
   DEV_NULL ?= /dev/null
 endif
 
-SDCCFLAGS += --less-pedantic -DREENTRANT=__reentrant
+SDCCFLAGS += --less-pedantic
 LINKFLAGS += mcs51.lib libsdcc.lib liblong.lib libint.lib libfloat.lib
 
 OBJEXT = .rel
