@@ -1,3 +1,9 @@
+2016-10-22 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/*.c,
+	  support/regression/ports/*/spec.mk:
+	  Cleanup handling of __reentrant in the regression tests, RFE #517.
+
 2016-10-22 Ben Shi <powerstudio1st AT 163 DOT com>
 
         * sdas/linksrc/lksym.c
